mavensmate/TrainingClass/src/objects/Training_Class__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Training Classes</relationshipLabel>
        <relationshipName>Training_Classes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Certification_Date__c</fullName>
        <label>Certification Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Class_Type__c</fullName>
        <label>Class Type</label>
        <picklist>
            <picklistValues>
                <fullName>CTS Zip</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inspection Trainer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Operator Trainer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sky Trail</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <picklist>
            <picklistValues>
                <fullName>Customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RCI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Local</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Number_of_Participants__c</fullName>
        <label>Number of Participants</label>
        <summaryFilterItems>
            <field>Training_Participants__c.Training_Role__c</field>
            <operation>equals</operation>
            <value>Student</value>
        </summaryFilterItems>
        <summaryForeignKey>Training_Participants__c.Training_Class__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Training Classes</relationshipLabel>
        <relationshipName>Training_Classes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Complete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Scheduled</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Training Class</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Opportunity__c</columns>
        <columns>Class_Type__c</columns>
        <columns>Certification_Date__c</columns>
        <columns>Number_of_Participants__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Training Class Id</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Training Classes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>